@@ -178,9 +178,9 @@ SEXP ksmooth(SEXP x, SEXP y, SEXP snp, SEXP skrn, SEXP sbw);
 SEXP SplineCoef(SEXP method, SEXP x, SEXP y);
 SEXP SplineEval(SEXP xout, SEXP z);
 
-SEXP ApproxTest(SEXP x, SEXP y, SEXP method, SEXP sf);
+SEXP ApproxTest(SEXP x, SEXP y, SEXP method, SEXP f, SEXP na_rm);
 SEXP Approx(SEXP x, SEXP y, SEXP v, SEXP method,
-	    SEXP yleft, SEXP yright, SEXP sf);
+	    SEXP yleft, SEXP yright, SEXP f, SEXP na_rm);
 
 SEXP LogLin(SEXP dtab, SEXP conf, SEXP table, SEXP start,
 	    SEXP snmar, SEXP eps, SEXP iter);
